# SupportForge

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  docker-compose.test.yml  docker-compose.yml  start.sh
backend/: Dockerfile  audit_all.py  production_audit.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: budget_guard.py  context_manager.py  fraud_check.py  graph.py  kb_search.py  resolver.py  state.py  supervisor.py  triage.py
backend/app/api/: admin.py  agent.py  auth.py  tickets.py
backend/app/core/: cache.py  confidence.py  fastpath.py  resilience.py  security.py
backend/app/models/: __init__.py  agent_step.py  audit_log.py  conversation.py  human_correction.py  knowledge_base.py  ticket.py  user.py
backend/app/observability/: audit.py  prometheus.py  replay.py
backend/app/rag/: bm25_index.py  embedder.py  feedback_indexer.py  reranker.py  retriever.py
backend/app/schemas/: agent.py  user.py
backend/app/tools/: __init__.py  escalate.py  get_ticket.py  search_kb.py  send_email.py  translate.py  update_status.py
backend/app/workers/: agent_worker.py
backend/data/knowledge_base/: cod_policy.txt  escalation_sla.txt  gst_invoice_policy.txt  refund_policy.txt  shipping_delay_faq.txt
backend/scripts/: init.sql  seed_admin.py  seed_kb.py
backend/tests/: conftest.py
backend/tests/evaluation/: robustness_dataset.py
backend/tests/integration/: test_agent_graph.py  test_api.py
backend/tests/unit/: test_confidence.py  test_fastpath.py  test_resilience.py
docs/screenshots/: README.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/dashboard/tickets/[id]/: page.tsx
frontend/app/dashboard/tickets/new/: page.tsx
frontend/app/login/: page.tsx
grafana/provisioning/dashboards/: provider.yaml  supportforge.json
